testdata/baselines/reference/submodule/compiler/jsFileClassPropertyType3.errors.txt
bar.ts(1,1): error TS2322: Type 'string' is not assignable to type 'number'.
foo.js(3,13): error TS2304: Cannot find name 'cond'.


==== foo.js (1 errors) ====
    class C {
        constructor() {
            if (cond) {
                ~~~~
!!! error TS2304: Cannot find name 'cond'.
                this.p = null;
            }
            else {
                this.p = 0;
            }
        }
    }
    
==== bar.ts (1 errors) ====
    (new C()).p = "string"; // Error
    ~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    